# Assignment1_FSM

./: .gitignore  CMakeLists.txt  readme.md
Code/: CMakeLists.txt  main.cpp
Code/Characters/: Agent.cpp  Agent.h  AgentOwnedStates.cpp  AgentOwnedStates.h  EntityNames.h  Personalities.h
Code/Locations/: Locations.h
Code/Messaging/: CrudeTimer.h  EntityManager.cpp  EntityManager.h  MessageDispatcher.cpp  MessageDispatcher.h  MessageTypes.h  SMS.h  Telegram.h
Code/StateMachine/: BaseGameEntity.cpp  BaseGameEntity.h  State.h  StateMachine.h
Code/Utilities/: ConsoleUtils.h  TextColor.h  Utilities.h
Instructions/: Checklist.md  CodeReview.md  Fixes.md  Reporting.md  Task.md
